--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "'https://invoice.etax.nat.gov.tw/'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "</html>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        " </tr>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
        " ['頭獎', '09505831\\n\\n54219897\\n\\n17469638\\n同期統一發票收執聯8位數號碼與頭獎號碼相同者獎金20萬元']]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "['21981893', '39597522', '09505831', '54219897', '17469638']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,34 +580,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "invoice_number=input('請輸入號碼:')\n",
-    "bingo=False\n",
-    "for i in range(len(numbers)):\n",
-    "    if i==0 or i==1:\n",
-    "        if numbers[i]==invoice_number:\n",
+    "invoice_number=''\n",
+    "invoice_number[len(invoice_number)-3:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入號碼:(0:exit)893\n",
+      "有機會中1000萬:21981893\n",
+      "請輸入號碼:(0:exit)0\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    invoice_number=input('請輸入號碼:(0:exit)')\n",
+    "    if invoice_number=='0':\n",
+    "        break\n",
+    "    \n",
+    "    bingo=False\n",
+    "    for i in range(len(numbers)):\n",
+    "        if numbers[i][5:]==invoice_number[len(invoice_number)-3:]:\n",
     "            bingo=True\n",
-    "    else:\n",
-    "        if numbers[i][5:]==invoice_number[5:]:\n",
-    "            bigo=True\n",
+    "            break\n",
     "\n",
     "    if bingo:\n",
-    "        break\n",
-    "\n",
-    "if bingo:\n",
-    "    if i==0:\n",
-    "        print(f'中啦1000萬:{invoice_numbe}')\n",
-    "    elif i==1:\n",
-    "        print(f'中啦20萬:{invoice_numbe}')\n",
+    "        if i==0:\n",
+    "            print(f'有機會中1000萬:{numbers[i]}')\n",
+    "        elif i==1:\n",
+    "            print(f'有機會中20萬:{numbers[i]}')\n",
+    "        else:\n",
+    "            print(f'有機會中200:{numbers[i]}')\n",
     "    else:\n",
-    "        print(f'中啦200:{invoice_numbe}')\n",
+    "        print('再接再厲')\n",
     "\n",
-    "i,bingo"
+    "    i,bingo"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
